# jsj9325

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a21_cPython_import.py  cmake_install.cmake  enviroment.yml  infinit.c  student.txt  test.cpp  test.ino  test2.ino  untitled.ows
.vscode copy/: c_cpp_properties.json  launch.json
build copy/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  compile_commands.json
c++/: 1.c  qsort.c  reference.cpp  strcpy  swap  swap.cpp  variantSizeArray.c  variantSizeArray2  variantSizeArray2.c
c_example/: celsius.c  charnumber.c  compare  compare2  compare2.c  ddd  fourbit  fourbit.c  fourbit2  free  free.c  gender.c  limit  limit.c  literal  literal.c  makefile  oddeven.c  test  test.c  triangle.c  triangle2
c_example/part1/: CMakeCache.txt  CMakeLists.txt  Makefile  arithmetics  arithmetics.c  celsius  celsius.c  charnumber  cmake_install.cmake  compare.c  ddd.c  gender  increase  increase.c  oddeven  sizeof.c  test  test.c  triangle2.c
c_example/part1/tmp/: fourbit2.c
c_example/part2/: 1to10  1to10.c  1to10000  1to10000.c  2022avgtemp  2022avgtemp.c  CMakeLists.txt  Makefile  PosZeroNeg  PosZeroNeg.c  absolute  absolute.c  ascil  ascil.c  baseball  baseball.c  bigletter  bigletter.c  cmake_install.cmake  dice  dice.c  findarray  findarray.c  findmax  findmax.c  function  function.c  grade  grade.c  grade2  grade2.c  leafyear  leafyear.c  makefile  multiply  multiply.c  one2ten  one2ten.c  passfail  passfail.c  (+19 more)
cpp/: CMakeLists.txt  generic  generic.c  hello  hello.cpp  iostream.cpp  qsort.c  strcpy.c  testArray.c  testArray2.c
docker_test/: Dockerfile  compose.yml
kudig2025/: infinit.c
ml_dt_python/: a01_jupyter.ipynb  a02_fish.ipynb  a03_numpy.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a06_regression.ipynb  a07_linear_reg.ipynb  a08_polynomial_reg.ipynb  a09_classification.ipynb  a10_batch_slope.ipynb  a11_decision_tree.ipynb  a12_cross_validation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a15_pandas.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a18_transformer.ipynb  b01_logistic_mnist.ipynb  b02_lstm.ipynb
network/: CMakeLists.txt  client  hc2  hello2  hello_client2.c  hello_server.c  hello_server2.c  nq_client  nq_client.c  nq_server  nq_server.c  pipe  pipeServer  pipe_server.c  shm_client  shm_semaphore.c  shm_semaphore2.c
orange3/: .untitled4.ows.swp.p  bts.ows.html  corelation.py  healthcare-dataset-stroke-data2.tab  mlp_test.py  sample_submission.tab  test.ows  test1.ows  test1.py  untitled.ows  untitled1.ows  untitled2.ows  untitled3.ows  untitled4.ows  untitled5.ows  untitled6.ows  untitled7.ows  untitled8.ows  xgboost_parameter.ipynb
project1/: weather_api  weather_api.c
python/: a00.default.py  a01.py  a02_keyword.py  a04_print.py  a08_str_index.py  a11_formating.py  a12_str_class.py  a14_overloading.py  a15_datetime.py  a16_datetime2.py  a18_list_method.py  a25_time.py  a29_default_arg.py  a30_keyword_argument.py  a33_memorization.py  a34_Iru_cache.py  a35_lambda.py  a36_lambda2.py  a37_file1.py  a40_random_file.py  a41_generator.py  a44_iterator.py  a45_try_except.py  a46_multi_except.py  a49_random2.py  a50_sys.py  a53_package.py  data.txt  main  (+9 more)
sqlQuery/src/: .env  CMakeLists.txt  bookSql.c  main.c
(+883 files in other folders)
