cmake_minimum_required(VERSION 3.10)
project(MainProject)


# include_directories(complex)
#내부 CMakeLists.txt포함
# include(sqlQuery/CMakeLists.txt)
# include(c_example/part1/CMakeFilelists.c)

# add_subdirectory(sqlQuery)
# add_subdirectory(c_example/part1)
# add_subdirectory(c_example/part2)
# add_subdirectory(c_example/part3)
# # add_subdirectory(cpp)
# add_subdirectory(stl)
# add_subdirectory(smartpoint)
# add_subdirectory(network/tcp_udp)
# add_subdirectory(network/util)
# add_subdirectory(network/ipc)
# add_subdirectory(network/multiProcess)
# add_subdirectory(openCV/part1)
# add_subdirectory(openCV/part2)
# add_subdirectory(openCV/part3)
# add_subdirectory(openCV/part4)
add_subdirectory(openCV/part5)
add_subdirectory(openCV/part6)
# add_subdirectory(opencv_test)
# add_subdirectory(ml_dt_python/dl_module)

